# washu_app_PJ

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_DOCKER.md  api_specifications.md  data_collection_plan.md  database_design.md  development_plan.md  docker-compose.ci.yml  docker-compose.common.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  project_overview.md  technical_specifications.md  ui_ux_design.md  アプリの案を相談させてください。.txt
.github/workflows/: ci.yml  (+1 more)
backend/: Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: __init__.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_init_schema.py
backend/app/models/: __init__.py  brewery.py  sake.py  sake_taste_map.py  taste_tag.py
backend/app/schemas/: sake.py
backend/app/scripts/: load_seed.py
backend/seed/: breweries.csv  sake.csv  sake_taste_map.csv  taste_tags.csv
backend/tests/: test_api_integration.py  test_health.py  test_openapi_snapshot.py
backend/tests/snapshots/: openapi.json
docs/: DEV_ENV.md  DOCKER_NODE_BASE_IMAGE.md  DOCS_MASTER_RULES.md  RELEASE_GUIDE.md  SECURITY_NPM.md  TEST_PROCEDURE.md
frontend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.auto  Dockerfile.dev  Dockerfile.pnpm  Dockerfile.yarn  eslint.config.js  index.html  lighthouserc.cjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+820 files in other folders)
